--- a/nachos/threads/.gitignore
+++ b/nachos/threads/.gitignore
@@ -25,3 +25,7 @@
 /SynchList.class
 /ThreadQueue.class
 /ThreadedKernel.class
+/Boat$2.class
+/Condition2BACKUP.class
+/PriorityScheduler$compare.class
+/order.class
